<resources>
    <string name="facebookAppId">746619522048693</string>
    <string name="twitterAppKey">Nbp8EKv1BXNa6iTPqEDDGM2mB</string>
    <string name="twitterSecretKey">msu1ScOPb4oPGxZQYMU7cV953tLgzb60D8sKrjgoLF7MbfwBd3</string>
    <string name="flurryKey">H8K6PTCWCQZRBY24Y8KG</string>
    <string name="app_name">WHO ARE YOU WHEN YOU\'RE HUNGRY</string>
    <string name="enterDetailsHeader">ENTER DETAILS</string>
    <string name="formNameHint">  NAME*</string>
    <string name="formSurnameHint">SURNAME*</string>
    <string name="formEmailHint">EMAIL ID*</string>
    <string name="formCode">CODE</string>
    <string name="formMobileNo">MOBILE NUMBER*</string>
    <string name="formSubmitButton">SUBMIT</string>
    <string name="formStarNotice">* Marked fields are mandatory</string>
    <string name="formOr">OR</string>
    <string name="formFacebookConnect">CONNECT VIA FACEBOOK</string>
    <string name="getPictureTitle">"KICK START THIS FUN FILLED ESCAPADE WITH AN IMAGE OF YOURSELF"</string>
    <string name="takePicture"> TAKE PICTURE </string>
    <string name="uploadGallery">UPLOAD FROM GALLERY</string>
    <string name="promiseHeader">Our Promise</string>
    <string name="promiseText">At Mars we take our responsibility for marketing our brands appropriately very seriously. We have a Marketing Code that governs all our promotional activity and states that we only promote our products to people aged 12 and over as this is the age at which we believe that people can make informed choices about sensible snack consumption.
\nWe apply our Marketing Code to all our advertising and communications and are committed to providing you and your family with suitable and transparent information about our products.
\nFor more information about how we promote our products responsibly, please follow the link to the Mars Marketing Code.</string>
    <string name="hungryHeader">WHO ARE YOU \nWHEN YOU\'RE HUNGRY? </string>
    <string name="hungryText">USE THE SNICKERS APP AND FIND OUT WHO YOU ARE WHEN YOU ARE HUNGRY. SELECT FROM DIFFERENT MOODS AND CHARACTERS TO REVEAL THE REAL, HUNGRY YOU!</string>
    <string name="proceed">PROCEED</string>
    <string name="pickOptionHeaderText">PICK FROM ONE OF THE FOLLOWING OPTIONS</string>
    <string name="participateCampaignHeader">I WANT TO PARTICIPATE IN THE CAMPAIGN</string>
    <string name="howToParticipate_amit">HOW TO \nPARTICIPATE?</string>
    <string name="enter">ENTER</string>
    <string name="iJustWantToPlayTheGame">I JUST WANT TO \nPLAY THE GAME</string>
    <string name="play">PLAY</string>
    <string name="howToParticipatedataAMIT">KINDLY FILL IN YOUR DETAILS AND UPLOAD A HIGH RESOLUTION IMAGE OF YOURSELF. 100 LUCKY WINNERS SELECTED BY THE LOTTERY AUTHORITY.\n\n KEEP AN EYE ON THE MAILBOX!</string>
    <string name="remember">REMEMBER TO KEEP SNICKERS WRAPPER AND RECEIPT WHICH IS COVERING CAMPAIGN DURATION TO HELP REDEEM YOUR PRIZE.</string>
    <string name="TURKEY">TURKEY</string>
    <string name="QATAR">QATAR</string>
    <string name="JORDAN">JORDAN</string>
    <string name="UAE">UAE</string>
    <string name="KUWAIT">KUWAIT</string>
    <string name="BAHRAIN">BAHRAIN</string>
    <string name="OMAN">OMAN</string>
    <string name="form_header">KINDLY FILL IN YOUR PERSONAL DETAILS TO PROCEED FURTHER</string>
    <string name="dob">DATE OF* \nBIRTH</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="formAddress">ADDRESS*</string>
    <string name="legalAcceptance">I HAVE READ ALL THE LEGAL DETAILS REGARDING PARTICIPATION TERMS AND LOTTERY CONDITIONS. I ACCEPT THEM.</string>
    <string name="formMandatory">* MARKED FIELDS ARE MANDATORY</string>
    <string name="selectAvatarHeader">PICK YOUR FAVORITE CHARACTER AND SHARE A GREAT FACIAL SHOT OF YOURSELF.</string>
    <string name="selectAvatarWarning">KINDLY NOTE THAT IF YOUR PHOTO TYPE AND PICTURE RESOLUTION ISN\'T APPROPRIATE, WE\'LL GENERATE YOUR SNEAKERS HUNGER CHARACTER COVER WITHOUT YOUR FACE.</string>
    <string name="selectAvatar">SELECT CHARACTER</string>
    <string name="uploadHeader">UPLOAD A HIGH RESOLUTION IMAGE OF YOURSELF.</string>
    <string name="browse">BROWSE</string>
    <string name="thankYouHeader_amit">THANK YOU FOR BEING ONE OF THE PARTICIPANTS</string>
    <string name="thankYouMessage_amit">YOU STAND A CHANCE TO WIN \nAN IPAD 5 WITH A PERSONALISED COVER. \nSO KEEP YOUR FINGERS CROSSED!</string>
    <string name="share">SHARE</string>
    <string name="playTheGame">PLAY THE GAME</string>
    <string name="home">HOME</string>
    <string name="cancel">CANCEL</string>
    <string name="noCamera">No camera detected.</string>
    <string name="noSelectionMade">No selection made.</string>
    <string name="failedToLoad">Failed to load, try again.</string>
    <string name="processCancelled">Process cancelled!</string>
    <string name="chooseCharacter">CHOOSE \n CHARACTER</string>
    <string name="pickMood">PICK A \n MOOD</string>
    <string name="chooseProp">SELECT \n PROP</string>
    <string name="apply">APPLY</string>
    <string name="caveman">CAVEMAN</string>
    <string name="grandma">GRANDMA</string>
    <string name="diva">DIVA</string>
    <string name="clumpsy">WEAK</string>
    <string name="crazy">CRAZY</string>
    <string name="irritated">IRRITABLE</string>
    <string name="sad">UNFOCUSED</string>
    <string name="bonechain">BONECHAIN</string>
    <string name="scar">SCAR</string>
    <string name="hat">HAT</string>
    <string name="scarf">SCARF</string>
    <string name="glass">GLASS</string>
    <string name="wig">WIG</string>
    <string name="playTheGameAndFindOut">PLAY THE GAME AND FIND OUT.</string>
    <string name="cancelled">CANCELLED</string>
    <string name="permission_not_granted">PERMISSION NOT GRANTED</string>
    <string name="ok">OK</string>
    <string name="title_activity_activity__media_player_controller">Snickers</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="required">Required</string>
    <string name="inCorrectEmail">Incorrect email</string>
    <string name="agreeTC">Please agree the terms and conditions</string>
    <string name="inCorrectMobileNo">Incorrect Mobile Number</string>
    <string name="noInternetFound">Please verify your internet connection.</string>
    <string name="progressMessage">Please wait</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">SAVE PHOTO</string>
    <string name="invitefriends">INVITE FRIENDS</string>
    <string name="playagain">PLAY AGAIN</string>
    <string name="youare">YOU ARE</string>
    <string name="whenyouarehungry">WHEN YOU \nARE HUNGRY</string>
    <string name="reset">RESET</string>
    <string name="done">DONE</string>
    <string name="sucessfulShare">Successfully shared!</string>
    <string name="formTermsAndCondition"><![CDATA[Terms & Condition]]></string>
    <string name="selectProp">Please select a prop to apply.</string>
    <string name="userAvatarFileName">Snicker_Avatar.png</string>
    <string name="fileMissingError">Some error occured!</string>
    <string name="pleaseUpload">Please upload an image in order to proceed.</string>
    <string name="requestCancelled">Request cancelled</string>
    <string name="requestSent">Request sent</string>
    <string name="error">Error</string>
    <string name="avatarname1">DIVA</string>
    <string name="avatarname2">GRANDMA</string>
    <string name="avatarname3">CAVEMAN</string>
    <string name="avatardesc1">Do you suffer from uncontrollable outbursts when you’re hungry? And does your short temper go hand in hand with pre-historical roaring? Check, you’re a caveman. The most trivial things ignite your short fuse and this brutal force scares your friends big time.</string>
    <string name="avatardesc2">Does walking a few meters feel like running the marathon? Oh boy, the hungry version of you turned into a granny. The world is turning too fast and you can’t really keep up. And when people tell you to step up your game, no one is safe from the nagging attacks!</string>
    <string name="avatardesc3">Do you suffer from uncontrollable outbursts when you’re hungry? And does your short temper go hand in hand with pre-historical roaring? Check, you’re a caveman. The most trivial things ignite your short fuse and this brutal force scares your friends big time.</string>
    <string name="fb_share_title_t">Who you are when you are hungry</string>
    <string name="fb_share_desc_t">I just participated in Who Are You When You are Hungry campaign to win an iPad with a customized cover! Get yours too</string>
    <string name="fb_share_title">Who you are when you are hungry</string>
    <string name="fb_share_desc">Everything is different when you are hungry. Because you are not you when you are hungry. Play and find out.</string>
    <string name="tweet_t">I just participated in Who Are You When You\'re Hungry to win an iPad! Participate for a chance to win</string>
    <string name="tweet">Everything is different when you are hungry because you are not you when you are hungry. Play &amp; find out.</string>
    <string name="revealhungryme">REVEAL HUNGRY ME</string>
    <string name="termsAndCondition_registerData">        •This promotion is valid from <b>4th October 2014 until 3rd November 2014.</b>\n\n•The Raffle draw will be held on <b>13th November 2014</b> at Total Advertising LLC\’s office in Dubai.\n\n•Prizes cannot be exchanged for their cash value.\n\n•Prizes are <b>iPads 16GB Wifi Only.</b>\n\n•Winners will be contacted by phone numbers from the SMS database.\n\n•The prize should be claimed before <b>7th January 2015</b> and collected in Total Advertising LLC’s office. Contact Ms. Cecilia Cardona on 0559546009.\n\n•Winners will be required to present a Proof of Purchase (Receipt) and a form of identification (ID or Passport) to claim their prize.\n\n•Participants must save the Snickers Wrapper to redeem their prize.\n\n•Employees of Mars GCC, their Distributors and Advertising agencies are not eligible to participate in the promotion.\n\n•This SMS promotion is only valid for UAE, Kuwait, Oman &amp; Bahrain Customers (Qatar is not included in this promotion).\n\n</string>
    <string name="serverError">No data passed from server.</string>
    <string name="tnc_jordan">-The duration of the promotion is from 15th of Sept till 15th of November\n-Winners must keep the wrappers as a proof of purchase to redeem the gifts\n-There are 50 iPad Air 16 GB to be won\nJordan: 90665\nEgypt: 6063\nUAE: 5079\nBAHRAIN: 00 973 382 99457\nKUWAIT: 00 965 663 84573\nOMAN: 00 968 998 25454</string>
    <string name="rotate">ROTATE</string>
</resources>